# own-ossdisk

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/dependencies/: auth.py  oss.py
app/models/: family.py  oss.py  user.py
app/routers/: common.py  oss.py  user.py
app/routers/schemas/: common.py  family.py  oss.py  user.py
app/routers/utils/: common.py  oss.py  user.py
frontend/: index.html  package.json
frontend/src/: main.js
frontend/src/components/disk/: DiskList.vue  ObjectList.vue
frontend/src/request/: useMyFetch.js
frontend/src/request/api/: oss.js  user.js
frontend/src/router/: index.js
frontend/src/store/: auth.js  user.js
frontend/src/view/: HomeView.vue  LoginView.vue
frontend/src/view/user/view/: UserHome.vue
own-ossdisk/: package.json
own-ossdisk/src/: main.js
own-ossdisk/src/request/: useMyFetch.js
own-ossdisk/src/request/api/: user.js
own-ossdisk/src/router/: index.js
own-ossdisk/src/store/: user.js
own-ossdisk/src/view/: HomeView.vue  LoginView.vue
